--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'java'
 }
 
-group 'github.dandeduck'
-version '1.0.0-alpha.1'
+version = VERSION_NAME
+group = GROUP
 
 repositories {
     mavenCentral()
