--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 VERSION_NAME=1.0.0-alpha.5
 VERSION_CODE=1
 GROUP=github.dandeduck.astromech
-POM_NAME=Astromech
+POM_NAME=astromech
 POM_ARTIFACT_ID=astromech
 POM_PACKAGING=jar
 POM_DESCRIPTION=Continuous position updating using inertial guidance and type safe objects.
