--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 
 VERSION_NAME=1.0.0-alpha.5
 VERSION_CODE=1
-GROUP=github.dandeduck.astromech
+GROUP=dandeduck.astromech
 POM_NAME=astromech
 POM_ARTIFACT_ID=astromech
 POM_PACKAGING=jar
 POM_DESCRIPTION=Continuous position updating using inertial guidance and type safe objects.
 
-POM_URL=https://github.com/dandeduck/Astromech.git
-POM_SCM_URL=https://github.com/dandeduck/Astromech.git
-POM_SCM_CONNECTION=scm:git@github.com:dandeduck/Astromech.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:dandeduck/Astromech.git
+POM_URL=https://dandeduck.github.com/dandeduck/Astromech.git
+POM_SCM_URL=https://dandeduck.github.com/dandeduck/Astromech.git
+POM_SCM_CONNECTION=scm:git@dandeduck.github.com:dandeduck/Astromech.git
+POM_SCM_DEV_CONNECTION=scm:git@dandeduck.github.com:dandeduck/Astromech.git
 POM_LICENCE_NAME=MIT License
 POM_LICENCE_URL=https://opensource.org/licenses/MIT
 POM_LICENCE_DIST=repo
