--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
-
-VERSION_NAME=1.0.0-alpha.5
+VERSION_NAME=1.0.0-alpha.1
 VERSION_CODE=1
-GROUP=dandeduck.astromech
+GROUP=github.dandeduck.astromech
 POM_NAME=astromech
 POM_ARTIFACT_ID=astromech
 POM_PACKAGING=jar
