--- a/math/build.gradle
+++ b/math/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
