--- a/units/gradle.properties
+++ b/units/gradle.properties
@@ -1,4 +1,4 @@
 POM_NAME=Units
-POM_ARTIFACT_ID=github.dandeduck.units
+POM_ARTIFACT_ID=units
 POM_PACKAGING=jar
 POM_DESCRIPTION=A collection of Unit and Value classes for unit-safe operations
